// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppHub__Content /> should render correctly 1`] = `
.c0 {
  height: calc(100% - 50px);
}

<div
  className="c0"
/>
`;

exports[`<AppHub__Wrapper /> should render correctly 1`] = `
.c0 {
  height: 100%;
  overflow: hidden;
  min-width: 430px;
}

<CustomizedFabric
  className="c0"
/>
`;

exports[`<AppHubRoot /> should render correctly if authenticated 1`] = `
<AppHub__Wrapper>
  <withSaga(Connect(AppHub))
    onDisplayRoutes={[Function]}
    routes={
      Array [
        Object {
          "component": [Function],
          "exact": true,
          "icon": "Apphub",
          "key": "home",
          "meta": Object {
            "desc": "Central location for CDT ODI applications",
            "keywords": "App, Hub",
            "title": "App Hub",
          },
          "name": "App Hub",
          "path": "/",
        },
        Object {
          "component": [Function],
          "exact": false,
          "icon": "Spa",
          "key": "spa",
          "meta": Object {
            "desc": "Security Policy Acknowledgement",
            "keywords": "SPA",
            "title": "SPA",
          },
          "name": "Spa",
          "path": "/spa",
        },
        Object {
          "href": "https://cold.govops.ca.gov/",
          "icon": "COLD",
          "key": "cold",
          "meta": Object {
            "desc": "",
            "keywords": "",
            "title": "COLD",
          },
          "name": "COLD",
        },
        Object {
          "href": "http://bars.technology.ca.gov/",
          "icon": "BARS",
          "key": "bars",
          "meta": Object {
            "desc": "Badge Access Request System",
            "keywords": "badge, employee, new, student, request",
            "title": "BARS",
          },
          "name": "BARS",
        },
        Object {
          "href": "http://employeedirectory/",
          "icon": "ED",
          "key": "ed",
          "meta": Object {
            "desc": "Employee Directory",
            "keywords": "Employee, Directory, Lookup",
            "title": "ED",
          },
          "name": "ED",
        },
      ]
    }
  />
  <AppHub__Content>
    <Router
      routes={
        Array [
          Object {
            "component": [Function],
            "exact": true,
            "icon": "Apphub",
            "key": "home",
            "meta": Object {
              "desc": "Central location for CDT ODI applications",
              "keywords": "App, Hub",
              "title": "App Hub",
            },
            "name": "App Hub",
            "path": "/",
          },
          Object {
            "component": [Function],
            "exact": false,
            "icon": "Spa",
            "key": "spa",
            "meta": Object {
              "desc": "Security Policy Acknowledgement",
              "keywords": "SPA",
              "title": "SPA",
            },
            "name": "Spa",
            "path": "/spa",
          },
          Object {
            "href": "https://cold.govops.ca.gov/",
            "icon": "COLD",
            "key": "cold",
            "meta": Object {
              "desc": "",
              "keywords": "",
              "title": "COLD",
            },
            "name": "COLD",
          },
          Object {
            "href": "http://bars.technology.ca.gov/",
            "icon": "BARS",
            "key": "bars",
            "meta": Object {
              "desc": "Badge Access Request System",
              "keywords": "badge, employee, new, student, request",
              "title": "BARS",
            },
            "name": "BARS",
          },
          Object {
            "href": "http://employeedirectory/",
            "icon": "ED",
            "key": "ed",
            "meta": Object {
              "desc": "Employee Directory",
              "keywords": "Employee, Directory, Lookup",
              "title": "ED",
            },
            "name": "ED",
          },
        ]
      }
    />
  </AppHub__Content>
</AppHub__Wrapper>
`;

exports[`<AppHubRoot /> should render correctly if not authenticated 1`] = `
<AppHub__Wrapper>
  <withSaga(Connect(AppHub))
    onDisplayRoutes={[Function]}
    routes={
      Array [
        Object {
          "component": [Function],
          "exact": true,
          "icon": "Apphub",
          "key": "home",
          "meta": Object {
            "desc": "Central location for CDT ODI applications",
            "keywords": "App, Hub",
            "title": "App Hub",
          },
          "name": "App Hub",
          "path": "/",
        },
        Object {
          "component": [Function],
          "exact": false,
          "icon": "Spa",
          "key": "spa",
          "meta": Object {
            "desc": "Security Policy Acknowledgement",
            "keywords": "SPA",
            "title": "SPA",
          },
          "name": "Spa",
          "path": "/spa",
        },
        Object {
          "href": "https://cold.govops.ca.gov/",
          "icon": "COLD",
          "key": "cold",
          "meta": Object {
            "desc": "",
            "keywords": "",
            "title": "COLD",
          },
          "name": "COLD",
        },
        Object {
          "href": "http://bars.technology.ca.gov/",
          "icon": "BARS",
          "key": "bars",
          "meta": Object {
            "desc": "Badge Access Request System",
            "keywords": "badge, employee, new, student, request",
            "title": "BARS",
          },
          "name": "BARS",
        },
        Object {
          "href": "http://employeedirectory/",
          "icon": "ED",
          "key": "ed",
          "meta": Object {
            "desc": "Employee Directory",
            "keywords": "Employee, Directory, Lookup",
            "title": "ED",
          },
          "name": "ED",
        },
      ]
    }
  />
  <LoadingMessage />
</AppHub__Wrapper>
`;
